--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ export(create_directory)
 export(download.specimen.image)
 export(resize.image)
 export(search.specimen.metadata)
+importFrom(magick,geometry_size_pixels)
 importFrom(magick,image_info)
 importFrom(magick,image_read)
 importFrom(magick,image_resize)
+importFrom(magick,image_write)
 importFrom(rgbif,occ_search)
+importFrom(utils,download.file)
