passing checks, maybe cran ready

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,14 @@ importFrom(magick,image_info)
 importFrom(magick,image_read)
 importFrom(magick,image_resize)
 importFrom(magick,image_write)
+importFrom(rgbif,occ_download)
 importFrom(rgbif,occ_search)
+importFrom(rgbif,pred_in)
 importFrom(sf,st_as_text)
 importFrom(sf,st_polygon)
 importFrom(sf,st_sfc)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
+importFrom(utils,capture.output)
 importFrom(utils,download.file)
 importFrom(utils,write.csv)
